--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
 
     /* Form Container */
     .form-container {
-      width: 100%;
-      max-width: 450px;
-      height: auto;
+      width: 450px;
+      height: 550px; /* Fixed height */
       background-color: #fff;
-      box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 40px;
+      box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 40px; /* Increased and smoother shadow */
       border-radius: 20px;
       box-sizing: border-box;
-      padding: 20px;
+      padding: 40px;
       text-align: center;
       transition: background-color 0.5s ease;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: flex-start; /* Align content to the top */
     }
 
     /* Inline Heading */
@@ -40,16 +39,16 @@
       font-weight: 700;
       color: #2c3e50;
       margin-bottom: 20px;
-      white-space: nowrap;
-      margin-top: 0;
+      white-space: nowrap; /* Prevents text from wrapping */
+      margin-top: 0; /* Move heading up */
     }
 
     /* Switch */
     .switch {
-      --_switch-bg-clr: #FBF3DF;
+      --_switch-bg-clr: #FBF3DF; /* Background color matching the theme */
       --_switch-padding: 4px;
-      --_slider-bg-clr: rgba(108, 92, 231, 0.65);
-      --_slider-bg-clr-on: rgba(231, 76, 60, 0.65);
+      --_slider-bg-clr: rgba(108, 92, 231, 0.65); /* Slider color (unchecked) */
+      --_slider-bg-clr-on: rgba(231, 76, 60, 0.65); /* Slider color (checked) */
       --_slider-txt-clr: #ffffff;
       --_label-padding: 1rem 2rem;
       --_switch-easing: cubic-bezier(0.47, 1.64, 0.41, 0.8);
@@ -84,7 +83,7 @@
       place-content: center;
       transition: opacity 300ms ease-in-out 150ms;
       padding: var(--_label-padding);
-      color: #2c3e50;
+      color: #2c3e50; /* Text color */
       font-weight: 500;
     }
 
@@ -149,17 +148,17 @@
 
     /* Donation Options */
     .donation-options {
-      display: none;
+      display: none; /* Hidden by default */
       flex-direction: column;
       gap: 20px;
       opacity: 0;
       transition: opacity 0.5s ease, transform 0.5s ease;
       transform: translateY(10px);
-      flex: 1;
+      flex: 1; /* Take remaining space */
     }
 
     .donation-options.active {
-      display: flex;
+      display: flex; /* Show when active */
       opacity: 1;
       transform: translateY(0);
     }
@@ -213,15 +212,22 @@
       transform: translateY(-2px);
     }
 
-    /* Razorpay Button Container */
-    .razorpay-button-container {
+    .donation-options .donate-button {
       width: 100%;
-      margin-top: 20px;
+      padding: 14px;
+      background: #6C5CE7;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 600;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
     }
 
-    .razorpay-button-container form {
-      display: flex;
-      justify-content: center;
+    .donation-options .donate-button:hover {
+      background: #5a4fcf;
+      transform: translateY(-2px);
     }
 
     /* Dynamic Box Color */
@@ -249,32 +255,6 @@
 
     .form-container.monthly .suggested-amounts button:hover {
       background: rgba(231, 76, 60, 0.1);
-    }
-
-    /* Mobile-specific styles */
-    @media (max-width: 480px) {
-      .form-container {
-        padding: 15px;
-      }
-
-      .form-container h2 {
-        font-size: 24px;
-      }
-
-      .donation-options {
-        gap: 15px;
-      }
-
-      .donation-options input,
-      .donation-options select {
-        font-size: 14px;
-        padding: 10px;
-      }
-
-      .donation-options .suggested-amounts button {
-        font-size: 14px;
-        padding: 10px;
-      }
     }
   </style>
 </head>
@@ -312,11 +292,9 @@
       </div>
 
       <!-- Razorpay Payment Button for One-Time Donation -->
-      <div class="razorpay-button-container">
-        <form>
-          <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PoTRENTzWQHx3o" async> </script>
-        </form>
-      </div>
+      <form>
+        <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PoTRENTzWQHx3o" async> </script>
+      </form>
     </div>
 
     <!-- Monthly Donation Options -->
@@ -341,11 +319,9 @@
       </div>
 
       <!-- Razorpay Payment Button for Monthly Donation -->
-      <div class="razorpay-button-container">
-        <form>
-          <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PoTRENTzWQHx3o" async> </script>
-        </form>
-      </div>
+      <form>
+        <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PoTRENTzWQHx3o" async> </script>
+      </form>
     </div>
   </div>
 
